--- a/project/app/templates/app/base.html
+++ b/project/app/templates/app/base.html
@@ -12,11 +12,16 @@
     <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
         <a href="/" class="text-xl font-semibold">Market</a>
         <div class="space-x-6">
-            <a href="#" class="text-lg front-semibold hover:text-gray-500">New item</a>
+            <a href="{% url 'item:new' %}" class="text-lg front-semibold hover:text-gray-500">New item</a>
             <a href="#" class="text-lg front-semibold hover:text-gray-500">Browse</a>
 
-            <a href="#" class="px-6 py-3 text-lg front-semibold bg-teal-500 text-white rounded-xl hover:text-teal-700">Sign up</a>
-            <a href="#" class="px-6 py-3 text-lg front-semibold bg-gray-500 text-white rounded-xl hover:text-gray-700">Login in</a>
+            {% if request.user.is_authenticated %}
+            <a href="#" class="px-6 py-3 text-lg front-semibold bg-teal-500 text-white rounded-xl hover:text-teal-700">Indox</a>
+            <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg front-semibold bg-gray-500 text-white rounded-xl hover:text-gray-700">Dashboard</a>
+            {% else %}
+                <a href="{% url 'app:signup' %}" class="px-6 py-3 text-lg front-semibold bg-teal-500 text-white rounded-xl hover:text-teal-700">Sign up</a>
+                <a href="{% url 'app:login' %}" class="px-6 py-3 text-lg front-semibold bg-gray-500 text-white rounded-xl hover:text-gray-700">Login in</a>
+            {% endif %}
         </div>
     </nav>
     <div class="px-6 py-6">
@@ -35,7 +40,7 @@
             <h3 class="mb-5 font-semibold text-gray-400" >Menu</h3>
             <ul class="space-y-2">
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-                <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
+                <li><a href="{% url 'app:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Privacy policy</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Term of use</a></li>
             </ul>
